--CEF-683 fixed warning text color changed SCC modal warning text to be the same color as all other warning text changed modal backdrop opacity for firefox color contrast violation

--- a/cef-web/src/main/webapp/src/styles.scss
+++ b/cef-web/src/main/webapp/src/styles.scss
@@ -61,6 +61,10 @@ thead.thead-cef-medium {
     font-size: 80%;
 }
 
+.modal-backdrop.show {
+    opacity: 0.45;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
